--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,16 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+beautifulsoup4 = "^4.10.0"
+requests = "^2.26.0"
+pandas = "^1.3.4"
+lxml = "^4.6.4"
 
 [tool.poetry.dev-dependencies]
+isort = "^5.9.3"
+mypy = "^0.910"
+black = "^21.9b0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
