--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ beautifulsoup4 = "^4.10.0"
 requests = "^2.26.0"
 pandas = "^1.3.4"
 lxml = "^4.6.4"
+psycopg2 = "^2.9.2"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
