--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ DATABASE_URL=
 MAILGUN_DOMAIN=
 MAILGUN_API_KEY=
 EMAIL_TO=
+
+# Twitter
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_SECRET=
+TWITTER_BEARER_TOKEN=
