--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pandas = "^1.3.4"
 lxml = "^4.6.4"
 psycopg2 = "^2.9.2"
 python-dotenv = "^0.19.2"
+tweepy = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
