--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ lxml = "^4.6.4"
 psycopg2 = "^2.9.2"
 python-dotenv = "^0.19.2"
 tweepy = "^4.4.0"
+pytz = "^2021.3"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
