--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2 = "^2.9.2"
 python-dotenv = "^0.19.2"
 tweepy = "^4.4.0"
 pytz = "^2021.3"
+html5lib = "^1.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
