--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,11 @@ beautifulsoup4 = "^4.10.0"
 requests = "^2.26.0"
 pandas = "^1.3.4"
 lxml = "^4.6.4"
-psycopg2 = "^2.9.2"
 python-dotenv = "^0.19.2"
 tweepy = "^4.4.0"
 pytz = "^2021.3"
 html5lib = "^1.1"
+google-cloud-bigquery = "^3.3.2"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
