Use Google BigQuery instead of Postgres

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Postgres
-DATABASE_URL=
+# BigQuery
+GOOGLE_APPLICATION_CREDENTIALS=/Users/gregoryfinley/git-repos/google-credentials.json
 
 # Mailgun
 MAILGUN_DOMAIN=
