--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,14 @@ python-dotenv = "^0.19.2"
 tweepy = "^4.4.0"
 pytz = "^2021.3"
 html5lib = "^1.1"
-google-cloud-bigquery = "^3.3.2"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
 mypy = "^0.910"
 black = "^21.9b0"
 flake8 = "^4.0.1"
+types-mysqlclient = "^2.1.5.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
