--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,20 @@
 beautifulsoup4==4.11.2 ; python_full_version >= "3.11.1"
-cachetools==5.3.0 ; python_full_version >= "3.11.1"
 certifi==2022.12.7 ; python_full_version >= "3.11.1"
-charset-normalizer==3.0.1 ; python_full_version >= "3.11.1"
-google-api-core==2.11.0 ; python_full_version >= "3.11.1"
-google-api-core[grpc]==2.11.0 ; python_full_version >= "3.11.1"
-google-auth==2.16.1 ; python_full_version >= "3.11.1"
-google-cloud-bigquery==3.6.0 ; python_full_version >= "3.11.1"
-google-cloud-core==2.3.2 ; python_full_version >= "3.11.1"
-google-crc32c==1.5.0 ; python_full_version >= "3.11.1"
-google-resumable-media==2.4.1 ; python_full_version >= "3.11.1"
-googleapis-common-protos==1.58.0 ; python_full_version >= "3.11.1"
-grpcio-status==1.51.3 ; python_full_version >= "3.11.1"
-grpcio==1.51.3 ; python_full_version >= "3.11.1"
+charset-normalizer==3.1.0 ; python_full_version >= "3.11.1"
 html5lib==1.1 ; python_full_version >= "3.11.1"
 idna==3.4 ; python_full_version >= "3.11.1"
 lxml==4.9.2 ; python_full_version >= "3.11.1"
+mysqlclient==2.1.1 ; python_full_version >= "3.11.1"
 numpy==1.24.2 ; python_full_version >= "3.11.1"
 oauthlib==3.2.2 ; python_full_version >= "3.11.1"
-packaging==23.0 ; python_full_version >= "3.11.1"
 pandas==1.5.3 ; python_full_version >= "3.11.1"
-proto-plus==1.22.2 ; python_full_version >= "3.11.1"
-protobuf==4.22.0 ; python_full_version >= "3.11.1"
-pyasn1-modules==0.2.8 ; python_full_version >= "3.11.1"
-pyasn1==0.4.8 ; python_full_version >= "3.11.1"
 python-dateutil==2.8.2 ; python_full_version >= "3.11.1"
 python-dotenv==0.19.2 ; python_full_version >= "3.11.1"
 pytz==2021.3 ; python_full_version >= "3.11.1"
 requests-oauthlib==1.3.1 ; python_full_version >= "3.11.1"
 requests==2.28.2 ; python_full_version >= "3.11.1"
-rsa==4.9 ; python_full_version >= "3.11.1"
 six==1.16.0 ; python_full_version >= "3.11.1"
 soupsieve==2.4 ; python_full_version >= "3.11.1"
-tweepy==4.12.1 ; python_full_version >= "3.11.1"
-urllib3==1.26.14 ; python_full_version >= "3.11.1"
+tweepy==4.13.0 ; python_full_version >= "3.11.1"
+urllib3==1.26.15 ; python_full_version >= "3.11.1"
 webencodings==0.5.1 ; python_full_version >= "3.11.1"
